--- a/etc/objects/commands/commands-ubuntu.cfg
+++ b/etc/objects/commands/commands-ubuntu.cfg
@@ -1,9 +1,19 @@
 define command{
-        command_name check_http_port
-        command_line $USER1$/check_http -I $HOSTADDRESS$ -p $_SERVICEport_number$ $ARG1$
+        command_name	check_http_port
+        command_line	$USER1$/check_http -I $HOSTADDRESS$ -p $_SERVICEport_number$ $ARG1$
         }
 
 define command{
         command_name    check_apt
         command_line    $USER1$/check_apt
         }
+
+define command{
+	command_name	check_nrpe
+	command_line	$USER1$/check_nrpe -H $HOSTADDRESS$ -n -c $ARG1$
+	}
+
+define command{
+	command_name	check_nrpe_secure
+	command_line	$USER1$/check_nrpe -H $HOSTADDRESS$ -c $ARG1$
+	}
