--- a/etc/objects/disabled/raspberrypi-01.cfg
+++ b/etc/objects/disabled/raspberrypi-01.cfg
@@ -2,59 +2,59 @@ define host{
         use                     linux-server            ; Name of host template to use
 							; This host definition will inherit all variables that are defined
 							; in (or inherited by) the linux-server host template definition.
-        host_name               ubuntu-svr-docker01
-        alias                   Docker Server 01
-        address                 192.168.188.226
+        host_name               raspberrypi-01
+        alias                   Raspberry Pi 01
+        address                 192.168.188.77
 	hostgroups		linux-servers
         }
 
 define service{
         use                             local-service
-        host_name                       ubuntu-svr-docker01
+        host_name                       raspberrypi-01
         service_description             PING
 	check_command			check_ping!100.0,20%!500.0,60%
         }
 
 define service{
         use                             generic-service
-        host_name                       ubuntu-svr-docker01
+        host_name                       raspberrypi-01
         service_description             Root Partition
-	check_command			check_nrpe!check_disk!20%!10%!/
+	check_command			check_nrpe_secure!check_disk!20%!10%!/
         }
 
 define service{
         use                             generic-service
-        host_name                       ubuntu-svr-docker01
+        host_name                       raspberrypi-01
         service_description             Current Users
-	check_command			check_nrpe!check_users!20!50
+	check_command			check_nrpe_secure!check_users!20!50
         }
 
 define service{
         use                             generic-service
-        host_name                       ubuntu-svr-docker01
+        host_name                       raspberrypi-01
         service_description             Total Processes
-	check_command			check_nrpe!check_total_procs!250!400!RSZDT
+	check_command			check_nrpe_secure!check_total_procs!250!400!RSZDT
         }
 
 define service{
         use                             generic-service
-        host_name                       ubuntu-svr-docker01
+        host_name                       raspberrypi-01
         service_description             Current Load
-	check_command			check_nrpe!check_load!5.0,4.0,3.0!10.0,6.0,4.0
+	check_command			check_nrpe_secure!check_load!5.0,4.0,3.0!10.0,6.0,4.0
         }
 
 define service{
         use                             local-service
-        host_name                       ubuntu-svr-docker01
+        host_name                       raspberrypi-01
         service_description             SSH
 	check_command			check_ssh
         }
 
 define service{
 	use				generic-service
-	host_name			ubuntu-svr-docker01
+	host_name			raspberrypi-01
 	service_description		Package Updates
-	check_command			check_nrpe!check_apt
-        max_check_attempts              1
-        event_handler                   send-spark-message!Package updates available
+	check_command			check_nrpe_secure!check_apt
+	max_check_attempts		1
+	event_handler			send-spark-message!Package updates available
 	}
