--- a/etc/objects/servers/ubuntu-svr-ansible01.cfg
+++ b/etc/objects/servers/ubuntu-svr-ansible01.cfg
@@ -2,73 +2,59 @@ define host{
         use                     linux-server            ; Name of host template to use
 							; This host definition will inherit all variables that are defined
 							; in (or inherited by) the linux-server host template definition.
-        host_name               ubuntu-svr-devbox01
-        alias                   DevBox Server 01
-        address                 192.168.188.234
+        host_name               ubuntu-svr-ansible01
+        alias                   Ansible Server 01
+        address                 192.168.188.236
 	hostgroups		linux-servers
         }
 
 define service{
         use                             local-service
-        host_name                       ubuntu-svr-devbox01
+        host_name                       ubuntu-svr-ansible01
         service_description             PING
 	check_command			check_ping!100.0,20%!500.0,60%
         }
 
 define service{
         use                             generic-service
-        host_name                       ubuntu-svr-devbox01
+        host_name                       ubuntu-svr-ansible01
         service_description             Root Partition
 	check_command			check_nrpe!check_disk!20%!10%!/
         }
 
 define service{
         use                             generic-service
-        host_name                       ubuntu-svr-devbox01
+        host_name                       ubuntu-svr-ansible01
         service_description             Current Users
 	check_command			check_nrpe!check_users!20!50
         }
 
 define service{
         use                             generic-service
-        host_name                       ubuntu-svr-devbox01
+        host_name                       ubuntu-svr-ansible01
         service_description             Total Processes
 	check_command			check_nrpe!check_total_procs!250!400!RSZDT
         }
 
 define service{
         use                             generic-service
-        host_name                       ubuntu-svr-devbox01
+        host_name                       ubuntu-svr-ansible01
         service_description             Current Load
 	check_command			check_nrpe!check_load!5.0,4.0,3.0!10.0,6.0,4.0
         }
 
 define service{
         use                             local-service
-        host_name                       ubuntu-svr-devbox01
+        host_name                       ubuntu-svr-ansible01
         service_description             SSH
 	check_command			check_ssh
         }
 
 define service{
-        use                             local-service
-        host_name                       ubuntu-svr-devbox01
-        service_description             HTTP
-	check_command			check_http
-        }
-
-define service{
-        use                             generic-service
-        host_name                       ubuntu-svr-devbox01
-        service_description             Package Updates
-        check_command                   check_nrpe!check_apt
+	use				generic-service
+	host_name			ubuntu-svr-ansible01
+	service_description		Package Updates
+	check_command			check_nrpe!check_apt
 	max_check_attempts		1
 	event_handler			send-spark-message!Package updates available
-        }
-
-define service{
-	use				generic-service
-	host_name			ubuntu-svr-devbox01
-	service_description		SSL Check nathanglover.com
-	check_command			check_ssl_cert
 	}
