--- a/etc/objects/servers/ubuntu-svr-ns01.cfg
+++ b/etc/objects/servers/ubuntu-svr-ns01.cfg
@@ -9,57 +9,50 @@ define host{
         }
 
 define service{
-        use                             local-service         ; Name of service template to use
+        use                             local-service
         host_name                       ubuntu-svr-ns01
         service_description             PING
 	check_command			check_ping!100.0,20%!500.0,60%
         }
 
 define service{
-        use                             local-service         ; Name of service template to use
+        use                             generic-service
         host_name                       ubuntu-svr-ns01
         service_description             Root Partition
-	check_command			check_local_disk!20%!10%!/
+	check_command			check_nrpe!check_disk!20%!10%!/
         }
 
 define service{
-        use                             local-service         ; Name of service template to use
+        use                             generic-service
         host_name                       ubuntu-svr-ns01
         service_description             Current Users
-	check_command			check_local_users!20!50
+	check_command			check_nrpe!check_users!20!50
         }
 
 define service{
-        use                             local-service         ; Name of service template to use
+        use                             generic-service
         host_name                       ubuntu-svr-ns01
         service_description             Total Processes
-	check_command			check_local_procs!250!400!RSZDT
+	check_command			check_nrpe!check_total_procs!250!400!RSZDT
         }
 
 define service{
-        use                             local-service         ; Name of service template to use
+        use                             generic-service
         host_name                       ubuntu-svr-ns01
         service_description             Current Load
-	check_command			check_local_load!5.0,4.0,3.0!10.0,6.0,4.0
+	check_command			check_nrpe!check_load!5.0,4.0,3.0!10.0,6.0,4.0
         }
 
 define service{
-        use                             local-service         ; Name of service template to use
-        host_name                       ubuntu-svr-ns01
-        service_description             Swap Usage
-	check_command			check_local_swap!20!10
-        }
-
-define service{
-        use                             local-service         ; Name of service template to use
+        use                             local-service
         host_name                       ubuntu-svr-ns01
         service_description             SSH
 	check_command			check_ssh
         }
 
 define service{
-        use                             local-service
+        use                             generic-service
         host_name                       ubuntu-svr-ns01
         service_description             Package Updates
-        check_command                   check_apt
+        check_command                   check_nrpe!check_apt
         }
