--- a/helper-scripts/nagios-ubuntu-template.cfg
+++ b/helper-scripts/nagios-ubuntu-template.cfg
@@ -9,64 +9,59 @@ define host{
         }
 
 define service{
-        use                             local-service         ; Name of service template to use
+        use                             local-service
         host_name                       PRODTEMPLATEHOST
         service_description             PING
 	check_command			check_ping!100.0,20%!500.0,60%
         }
 
 define service{
-        use                             local-service         ; Name of service template to use
+        use                             generic-service
         host_name                       PRODTEMPLATEHOST
         service_description             Root Partition
-	check_command			check_local_disk!20%!10%!/
+	check_command			check_nrpe!check_disk!20%!10%!/
         }
 
 define service{
-        use                             local-service         ; Name of service template to use
+        use                             generic-service
         host_name                       PRODTEMPLATEHOST
         service_description             Current Users
-	check_command			check_local_users!20!50
+	check_command			check_nrpe!check_users!20!50
         }
 
 define service{
-        use                             local-service         ; Name of service template to use
+        use                             generic-service
         host_name                       PRODTEMPLATEHOST
         service_description             Total Processes
-	check_command			check_local_procs!250!400!RSZDT
+	check_command			check_nrpe!check_total_procs!250!400!RSZDT
         }
 
 define service{
-        use                             local-service         ; Name of service template to use
+        use                             generic-service
         host_name                       PRODTEMPLATEHOST
         service_description             Current Load
-	check_command			check_local_load!5.0,4.0,3.0!10.0,6.0,4.0
+	check_command			check_nrpe!check_load!5.0,4.0,3.0!10.0,6.0,4.0
         }
 
 define service{
-        use                             local-service         ; Name of service template to use
-        host_name                       PRODTEMPLATEHOST
-        service_description             Swap Usage
-	check_command			check_local_swap!20!10
-        }
-
-define service{
-        use                             local-service         ; Name of service template to use
+        use                             local-service
         host_name                       PRODTEMPLATEHOST
         service_description             SSH
 	check_command			check_ssh
         }
 
 define service{
-        use                             local-service         ; Name of service template to use
+        use                             local-service
         host_name                       PRODTEMPLATEHOST
         service_description             HTTP
 	check_command			check_http
         }
 
 define service{
-	use				local-service
+	use				generic-service
 	host_name			PRODTEMPLATEHOST
 	service_description		Package Updates
-	check_command			check_apt
+	check_command			check_nrpe!check_apt
+	max_check_attempts		1
+	event_handler			send-spark-message!Package updates available
 	}
